--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ header {
   display: flex;
   align-items: center;
   padding: 10px;
-  width: 550px;
+  /* width: 550px; */
   height: 65px;
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
 }
@@ -36,8 +36,8 @@ header {
   justify-content: space-between;
   padding-left: 10px;
   margin-right: auto;
-  width: 140px;
-  height: 24px;
+  /* width: 140px;
+  height: 24px; */
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -53,4 +53,30 @@ header {
   line-height: 15px;
   text-align: right;
   color: #ffffff;
+}
+
+main {
+  padding: 36px;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form-input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #d5d4d8;
+  text-indent: 5px;
+}
+.form-btn {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  cursor: pointer;
 }
