--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,7 @@ main {
   background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
   cursor: pointer;
 }
+
+.meme-image {
+  max-width: 100%;
+}
